<?xml version="1.0" encoding="UTF-8"?>
<resources>
	<string name="category_status">Status</string>
    <string name="category_actions">Actions</string>
    <string name="category_conditions">Conditions</string>
    <string name="category_extra">Extra</string>
    <string name="category_more">More</string>
	
    <string name="active">Active</string>
    <string name="active_summary_on">
    	Monitor incoming messages
    </string>
    <string name="active_summary_off">
    	Do nothing
    </string>
    
    <string name="offset_method">Adjustment Method</string>
    <string name="offset_method_summary">Method for adjusting time stamps</string>
    
    <string name="offset_hours">Offset Hours</string>
    <string name="offset_hours_summary">
    	How many hours to adjust incoming messages
    </string>
    
    <string name="offset_minutes">Offset Minutes</string>
    <string name="offset_minutes_summary">
    	How many minutes to adjust incoming messages
    </string>
    
    <string name="notify">Running Notification</string>
    <string name="notify_summary">
    	Add a running indicator to the notification bar
    </string>
    <string name="notify_message">
    	SMSFix service running
    </string>
    
    <string name="notify_icon">Icon Style</string>
    <string name="notify_icon_summary">
    	The style of icon to use
    </string>
    
    <string name="cdma">Future Only</string>
    <string name="cdma_summary">
    	Only adjust when SMS time is in the future.
    </string>
    
    <string name="roaming">Roaming Only</string>
    <string name="roaming_summary">
    	Only adjust when roaming
    </string>
    
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    
    <string name="donate">Donate! &lt;3</string>
    <string name="donate_title">Donate</string>
    <string name="donate_message">
    	Support the continued development of this app by installing the donate version.
    </string>
    
    <string name="donate_yes">Yes!</string>
    <string name="donate_no">Nope</string>
    
    <string name="roaming_title">Note</string>
    <string name="roaming_ok">OK</string>
    <string name="roaming_no">Nope</string>
    <string name="roaming_message">
    	Please note that I\'m unable to do any real testing of this setting since I do not experience this issue. I cannot guarantee that this method works at all. If you decide to try it out, please let me know the results!
    </string>
    
    <string name="logging">Logging</string>
    <string name="log_to_sd">Log to External Storage</string>
    <string name="add_note">Add Note</string>
    <string name="add_note_summary">
    	Add a message to the log file to draw attention to an issue
    </string>
    <string name="clear_log">Clear Log</string>
	<string name="clear_log_confirm">Are you sure you want to clear your logs?</string>    
    <string name="logs_cleared">Logs cleared</string>
    
    <string name="fix_old">Fix Old Messages</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    
    <string name="translate">Contribute Translations</string>
    
    <string name="email_dev">Email Developer</string>
    <string name="include_logs_title">Include Logs?</string>
    <string name="include_logs_message">
    	Would you like to attach your log files to the email? This will help diagnose any problems you\'re experiencing.
    </string>
    <string name="email_intent_title">Send email</string>
    
    <!-- changes to this value must also be changed in the other projects -->
    <string name="fix_old_title">Fix Old Messages</string>
    
    <string name="fix_old_instructions">
       Use this tool to fix any messages that were received prior to using SMS Time Fix. Set a start date and end date that includes the messages that you want adjusted.
       \n\nPlease make sure that you have backed up all of your messages before running this tool! If your battery dies, or the app crashes, or you have misconfigured the tool, there is no easy way to undo. Pick any of the SMS backup tools in the Play Store and back them up!
       \n\nNote that for some devices, the time of affected conversations will be incorrectly updated to the current time. The individual messages will be correct, but the conversation/thread time will not. i.e. In the main SMS app where it shows a snippet of all of your conversations, the last updated time will be incorrect. After selecting a conversation, all of the individual messages inside will have the correct time. This will be fixed once a new message is sent/received for a conversation.
    </string>
    
    <string name="fix_old_starting">Starting date:</string>
    <string name="fix_old_ending">Ending date:</string>
    <string name="fix_old_method">How to adjust messages:</string>
    <string name="fix_old_add">add</string>
    <string name="fix_old_subtract">subtract</string>
    <string name="fix_old_offset_hours">%s hours</string>
    <string name="fix_old_invalid_dates">Start time must be before end time</string>
    <string name="fix_old_invalid_offset">Offset must not be zero</string>
    <string name="fix_old_go">GO!</string>
    <string name="fix_old_confirm_title">Are you sure?</string>
    <string name="fix_old_confirm_message">There is no easy way to undo if something goes wrong. Please make sure you\'ve backed up your messages before continuing.</string>
    <string name="fix_old_complete_title">Complete</string>
    <string name="fix_old_complete_message">%s messages were updated</string>

    <!-- changes to this value must also be changed in the other projects -->
	<string name="about_title">About</string>
	
	<string name="about_version">
		Version %s
	</string>
	
	<string name="about_donated">Donated!</string>
	
	<string name="about_by">
		Written by:
	</string>
		
	<string name="about_contact">
		Matthew Precious
		\nhttp://mattprecious.com
	</string>
		
	<string name="about_blurb">
		Please contact me if there are any problems or if you would like to request a new feature. I\'d also love to hear if everything is working! Your feedback is very important to me. Every update I release is due to user feedback.
	</string>
	
	<string name="ok">OK</string>
	<string name="nope">Nope</string>
	
	<string name="whats_new">What\'s New?</string>
</resources>